# agent-mega-stack

./: .env  .gitignore  README.md  dev  reset_all.sh
backend/: pyproject.toml
backend/.rag/e1c90239-36e2-4b56-84b7-d54d6a2ad743/: index.faiss  index.pkl
backend/app/: main.py
backend/app/agents/: graph.py  http_tool.py  policy.py  tool_runtime.py  tools.py
backend/app/api/: admin.py  agents.py  agents_tools.py  auth.py  billing.py  chat.py  files.py  search.py  tools.py  tools.py.bak.CATALOG_1754851032  usage.py  users.py
backend/app/billing/: deps.py  limits.py  stripe_client.py
backend/app/core/: cors.py  db.py  ingest.py  provisioning.py  redis_client.py  security.py  settings.py
backend/app/memory/: history.py
backend/app/rag/: index.py
backend/backend/: requirements.txt
backend/backend/.local/faiss/e1c90239-36e2-4b56-84b7-d54d6a2ad743/: index.faiss  index.pkl
backend/backend/.local/uploads/: e1c90239-36e2-4b56-84b7-d54d6a2ad743_test_rag_doc.txt
backend/backend/app/agents/: http_tool.py  tool_runtime.py
backend/backend/app/api/: agents.py  tools.py
backend/backend/sql/: 20250809_agents_tools.sql
backend/sql/: 000_bootstrap.sql  000_full_reset_seed.sql  013_catalog_and_templates.sql
infra/: docker-compose.yml
sql/: 20250808_add_user_profile_fields.sql  20250809_refresh_tokens_and_profile.sql
